syntax = "proto3";

package core.organization_iam;
option go_package = "github.com/ca-risken/core/proto/organization_iam";

import "organization_iam/entity.proto";
import "validate/validate.proto";

message ListOrganizationRoleRequest {
  uint32 organization_id = 1;
  string name = 2 [ (validate.rules).string.max_len = 64 ];
  uint32 user_id = 3;
  uint32 access_token_id = 4;
}

message ListOrganizationRoleResponse { repeated uint32 role_id = 1; }

message GetOrganizationRoleRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ]; // Required
  uint32 role_id = 2 [ (validate.rules).uint32.gt = 0 ];         // Required
}

message GetOrganizationRoleResponse { OrganizationRole role = 1; }

message PutOrganizationRoleRequest {
  uint32 organization_id = 2 [ (validate.rules).uint32.gt = 0 ]; // Required
  string name = 1
      [ (validate.rules).string = {min_len : 1, max_len : 64} ]; // Required
}

message PutOrganizationRoleResponse { OrganizationRole role = 1; }

message DeleteOrganizationRoleRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ]; // Required
  uint32 role_id = 2 [ (validate.rules).uint32.gt = 0 ];         // Required
}

message AttachOrganizationRoleRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ]; // Required
  uint32 user_id = 2 [ (validate.rules).uint32.gt = 0 ];         // Required
  uint32 role_id = 3 [ (validate.rules).uint32.gt = 0 ];         // Required
}

message AttachOrganizationRoleResponse { OrganizationRole role = 1; }

message DetachOrganizationRoleRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ]; // Required
  uint32 user_id = 2 [ (validate.rules).uint32.gt = 0 ];         // Required
  uint32 role_id = 3 [ (validate.rules).uint32.gt = 0 ];         // Required
}
