syntax = "proto3";

package core.organization_iam;
option go_package = "github.com/ca-risken/core/proto/organization_iam";

import "organization_iam/entity.proto";
import "validate/validate.proto";

message ListOrganizationUserReservedRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ]; // Required
  string user_idp_key = 2 [ (validate.rules).string = {max_len : 255} ];
}

message ListOrganizationUserReservedResponse {
  repeated OrganizationUserReserved user_reserved = 1;
}

message PutOrganizationUserReservedRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ]; // Required
  uint32 reserved_id = 2;
  string user_idp_key = 3 [ (validate.rules).string = {max_len : 255} ];
  uint32 role_id = 4 [ (validate.rules).uint32.gt = 0 ]; // Required
}

message PutOrganizationUserReservedResponse {
  OrganizationUserReserved user_reserved = 1;
}

message DeleteOrganizationUserReservedRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ]; // Required
  uint32 reserved_id = 2 [ (validate.rules).uint32.gt = 0 ];     // Required
}
